kubernetes/apps/media/plex/config/plex-network-policy.yml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: maintainerr
        - matchLabels:
            app.kubernetes.io/name: plex-auto-languages
        - matchLabels:
            app.kubernetes.io/name: tautulli
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
